# db-chat-assistant

./: .gitignore  .pre-commit-config.yaml  Makefile  RAG.ipynb  README.md  environment.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dev.yml
Experiments/: README.MD  experiment1.py  leanring-langchain.md  prompt-processing.md  prompt-processing.py
Experiments/retrieval/: experiment1.txt  index.txt
Research/: How to evaluate generative AI.md  How to test a Generative AI.md  Readme.md  architectures.md  problem definition.md  reference material.md
data/: albums.csv  artists.csv  employees.csv  genres.csv  info.txt  invoices.csv  media_types.csv  playlists.csv  table_descriptions.csv
data/metadata/: albums.yaml  artists.yaml  customers.yaml  employees.yaml  genres.yaml  invoice_items.yaml  invoices.yaml  media_types.yaml  playlist_track.yaml  playlists.yaml  tracks.yaml
dbchat/src/: datastore.py  document_similarity.py  langchain_agent.py  query_execution_and_feedback.py  query_generation.py  result_explanation.py
examples/evaluation/: batch_evaluation_runner.ipynb  batcu_run.py  evaluate.ipynb  queries.csv
notebooks/: run_instrumented.py  sql_agent.ipynb  trulens.py
src/dbchat/: __init__.py  datastore.py  langchain_agent.py  logger.py  model.py  pandas_agent.py  query_execution_and_feedback.py  query_generation.py  sql_agent.py  utils.py  validation.py
src/tests/: evaluate_sql_agent.py  invalid_config.yml  test_evaluate.py  test_llm.py  test_pandas_agent.py  test_validation.py  utils.py  (+1 more)
tools/: logger.sh
(+33 files in other folders)
